# PhotoMigrator

./: CHANGELOG.md  CONTRIBUTING.md  DOWNLOAD.md  README.md  ROADMAP.md  pyproject.toml  setup.py
.github/: update_version_dropdown.py
.github/ISSUE_TEMPLATE/: bug_form.yml  enhancement_request.yml  feature_request.yml
help/: 0-configuration-file.md  1-command-line-interface.md  2-arguments-description-short.md  2-arguments-description.md  3-automatic-migration.md  4-google-takeout.md  5-synology-photos.md  6-immich-photos.md  7-other-features.md
help/execution/: execution-from-binaries.md  execution-from-docker.md  execution-from-source.md
help/gpth_process_explanations/: 00_GPTH_complete_pipeline.md
help/install-docker/: install-docker-linux.md  install-docker-macos.md  install-docker-windows.md
help/install-git/: install-git.md
help/install-python/: install-python.md
web/: __init__.py  config_ini.py  jobs.py  main.py  runner.py  schemas.py
web/static/css/: site.css
web/templates/: base.html  config.html  index.html  job_detail.html
